# jhub-apps

./: .gitignore  AGENTS.md  LICENSE  README.md  construct.yaml  environment-dev.yml  jupyter_config_profile_list  jupyterhub_config.py  package-lock.json  package.json  pyproject.toml  ragna-api.toml  ragna.toml  requirements.txt  traefik.toml
.github/: dependabot.yml
.github/workflows/: build-ui.yml  build.yml  docker.yml  lint-ui.yml  lint.yml  package.yml  python-package.yml  release.yml  test-integration.yml  test-k3s-integration.yml  test-ui.yml  test.yml
.husky/: pre-push
docker/: Dockerfile.jhub  Dockerfile.jupyterhub  README.md  docker-compose.yml  jupyterhub_config.py
docs/: README.md  docusaurus.config.js  package-lock.json  package.json
docs/docs/: configuration.md  installation.md  intro.md
docs/docs/concepts/: _category_.json  infrastructure-architecture.mdx
docs/docs/create-apps/: _category_.json  bokeh-app.md  custom-app.md  general-app.md  gradio-app.md  panel-app.md  plotly-dash-app.md  streamlit-app.md  voila-app.md
docs/docs/getting_started/: _category_.json  create-apps.md  create-custom-apps.md  installation.md
docs/docs/introduction/: create-apps.md  deploy-your-site.md
docs/docs/reference/: _category_.json  create-app-form.md
docs/src/: cookieConsent.js
docs/src/pages/: index.js  index.module.css
jhub_apps/: __about__.py  __init__.py  config_utils.py  configuration.py  constants.py  main.py  service_utils.py  spawner.py  version.py
jhub_apps/assets/: index.css  index.js
jhub_apps/config/: jupyterhub_config.py
jhub_apps/examples/: bokeh_basic.py  gradio_basic.py  jhub_app.yml  panel_basic.py  plotlydash_app.py  streamlit_app.py
jhub_apps/hub_client/: hub_client.py  utils.py
jhub_apps/japps/: main.py
jhub_apps/launcher/: hub_client.py  main.py  panel_app.py
jhub_apps/service/: Dockerfile  README.md  app.py  app_from_git.py  auth.py  client.py  initialize_startup_apps.py  japps_routes.py  logging_utils.py  main.py  middlewares.py  models.py  routes.py  security.py  service.py  utils.py
jhub_apps/service/app/: app.py  models.py  service.py
jhub_apps/service2/: app.py  models.py  security.py  service.py
jhub_apps/spawner/: command.py  env.py  spawner.py  spawner_creation.py  types.py  utils.py
jhub_apps/spawner/proxy/: __main__.py  config.cfg  oauth2.py
jhub_apps/static/: css  js
jhub_apps/static/css/: hub.css  index.css
jhub_apps/static/js/: index.js
jhub_apps/tasks/commands/: initialize_startup_apps.py
jhub_apps/templates/: 404.html  _font.css  home.html  japps_custom.html  japps_home.html  japps_page.html  launcher_base.html  login.html  not_running.html  oauth.html  page.html  server_options.html  style.css
jhub_apps/tests/: conftest.py  constants.py  test_api.py
jhub_apps/tests/common/: api_fixtures.py  constants.py
jhub_apps/tests/tests_e2e/: conftest.py  (+4 more)
jhub_apps/tests_e2e/: test_integration.py  test_playwright.py
jhub_apps/themes/: __init__.py
k3s-dev/: .gitignore  Makefile  README.md  Tiltfile  jupyterhub-values.yaml  k3d-config.yaml
k3s-dev/config/: 00-jhub-apps.py  01-spawner.py  02-profiles.py
rules/: traefik_dynamic.toml
scripts/: post_install.sh  setup_jhub.sh
simple_ext1/static/: bundle.js  tsconfig.tsbuildinfo
src/japps/: main.py
ui/: .env  .eslintrc.cjs  .prettierrc  README.md  SHADCN_MIGRATION.md  biome.json  build-and-copy.sh  components.json  eslint.config.js  index.html  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.setup.ts
ui/public/: env.js  services.json
ui/src/: App.tsx  index.css  main.tsx  store.ts  styles.scss  vite-env.d.ts
(+168 files in other folders)
