[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jhub-apps"
description = 'JupyterHub Apps'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

dependencies = [
    "hatchling",
    "hatch",
    "requests",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jupyterhub",
    "jupyter",
    "plotlydash-tornado-cmd",
    "bokeh-root-cmd",
    "jhsingle-native-proxy",
    "panel",
    "bokeh",
    "traitlets",
    "python-slugify",
    "PyJWT",
]
dynamic = ["version"]

[project.entry-points.jhub_apps]
jhub_apps = "jhub_apps"


[tool.hatch.version]
path = "jhub_apps/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "jupyterhub",
]

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "jhub_apps/__about__.py",
]

[tool.hatch.build.targets.wheel]
include = ["jhub_apps"]

[project.scripts]
japps = "jhub_apps.main:app"
