[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jhub-apps"
description = 'JupyterHub Apps'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

dependencies = [
    "hatchling",
    "hatch",
    "requests",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jupyterhub>4",
    "jupyter",
    "plotlydash-tornado-cmd",
    "bokeh-root-cmd",
    "panel",
    "bokeh",
    "traitlets",
    "python-slugify",
    "cachetools",
    "structlog",
    "PyJWT>=2.10.0",
    "GitPython",
    # pinning to avoid unexpected changes in spec causing
    # unexpected breakage
    "conda-project==0.4.2"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff",
    "voila",
    "dash",
    "streamlit",
    "gradio",
    "pytest",
    "playwright",
    "pytest-playwright",
    "pre-commit",
    "ipdb",
]

[project.entry-points.jhub_apps]
jhub_apps = "jhub_apps"


[tool.hatch.version]
path = "jhub_apps/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "jupyterhub",
]

[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311", "312"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "jhub_apps/__about__.py",
]

[tool.hatch.build.targets.wheel]
include = ["jhub_apps"]

[project.scripts]
japps = "jhub_apps.main:app"

[tool.ruff]
exclude = ["k3s-dev"]

[tool.pytest.ini_options]
markers = [
    "k3s: marks tests that can run on k3s deployment (deselect with '-m \"not k3s\"')",
]

[dependency-groups]
test-jupyterhub-4 = ["jupyterhub==4.1.5", "jupyter-telemetry==0.1.0", "async-generator==1.10"]
test-jupyterhub-5 = ["jupyterhub==5.3.0"]

[tool.uv]
conflicts = [
    [
      { group = "test-jupyterhub-4" },
      { group = "test-jupyterhub-5" },
    ],
]
